--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ and overall wind energy efficiency.
 </div>
 
 <script>
-fetch("https://job-description-9g87.onrender.com")
+fetch("https://job-description-9g87.onrender.com/track")
 .then(res => res.json())
 .then(data => {
     if (data.vpn) {
@@ -135,4 +135,5 @@ fetch("https://job-description-9g87.onrender.com")
 </script>
 
 </body>
+
 </html>
