--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@ fetch("https://job-description-9g87.onrender.com/track")
       document.getElementById("vpnWarning").style.display = "block";
       setTimeout(() => {
         // 🔴 აქ ჩაწერე redirect საიტი
-        window.location.href = "https://www.goldwind.com/en/";
+        window.location.href = "https://www.goldwind.com/";
       }, 7000);
     }
   });
 </script>
 
 </body>
+
 </html>
